--- a/Regularization.ipynb
+++ b/Regularization.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Vocabulary size = 30K"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
@@ -35,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 84,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-28T15:08:47.454589Z",
@@ -47,6 +40,8 @@
    "source": [
     "from BERTQG.token_generation import load_model, generate_token\n",
     "#from Regularization_module import Regularizer_Discriminator\n",
+    "from itertools import groupby\n",
+    "\n",
     "\n",
     "class QuestionGeneration():\n",
     "    def __init__(self, bert_model, lm_gq, uqa_qg, regularization=None):\n",
@@ -74,7 +69,7 @@
     "        qi = None\n",
     "        \n",
     "        # generation finished when [SEP] is created\n",
-    "        while not self.finished_generation(qi):\n",
+    "        while not self.__finished_generation(qi):\n",
     "            question_text = \" \".join(list_question_tokens)\n",
     "            \n",
     "            # Generate the toknes and probs of the ith query token using the lm and uqa models\n",
@@ -88,43 +83,34 @@
     "                qi = lm_qi_token\n",
     "            else: # UQA\n",
     "                qi = uqa_qi_token\n",
-    "                \n",
+    "\n",
     "            list_question_tokens.append(qi)\n",
     "            list_token_classes.append(qi_class)\n",
     "            \n",
-    "            # for testing\n",
-    "            print(list_question_tokens)\n",
-    "            print([\"UQA\" if cls == 0 else \"LM\" for cls in list_token_classes])\n",
-    "            print(\"\\n\")\n",
-    "\n",
+    "#             # for testing\n",
+    "#             print(list_question_tokens)\n",
+    "#             print([\"UQA\" if cls == 0 else \"LM\" for cls in list_token_classes])\n",
+    "#             print(\"\\n\")\n",
+    "        list_question_tokens = self.__remove_consecutive_repeated_tokens(list_question_tokens)\n",
     "        return \" \".join(list_question_tokens[:-1]) # without [SEP]\n",
     "            \n",
-    "    def finished_generation(self, question_token):\n",
+    "    def __finished_generation(self, question_token):\n",
     "        return question_token =='[SEP]'\n",
     "    \n",
-    "    def __convert2squad(self, context: str, answer: str, ans_start: int,  question: str) -> dict:\n",
+    "    def __remove_consecutive_repeated_tokens(self, list_tokens):\n",
     "        '''\n",
-    "        Create a SQuAD instance\n",
-    "        Inputs:\n",
-    "            - context: paragrah\n",
-    "            - answer\n",
-    "            - ans_start\n",
-    "            - question: might not be the full question (we are generating questions token by token)\n",
-    "        Returns:\n",
-    "            - squad instance\n",
+    "        Removes consecutive tokens.\n",
+    "        Sometimes the generated question is \"when when did...\",\n",
+    "        so we need to remove one when\n",
     "        '''\n",
-    "        squad = {'data': [], 'version': '1.0'}\n",
-    "        squad['data'].append({'paragraphs': [{'title': 'title', \n",
-    "                                              'context': context,\n",
-    "                                              'qas': [{'answers': [{'answer_start': ans_start, 'text': answer}],\n",
-    "                                                       'question': question,\n",
-    "                                                       'id': 0}]}]})\n",
-    "        return squad"
+    "        return [x[0] for x in groupby(list_tokens)]\n",
+    "    #assert remove_consecutive_repeated_tokens([1,1,1,1,1,1,2,3,4,4,5,1,2]) == [1, 2, 3, 4, 5, 1, 2]\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 85,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-28T15:08:52.230835Z",
@@ -136,9 +122,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "04/29/2020 00:57:33 - INFO - BERTQG.tokenization -   loading vocabulary file BERTQG/models/bert-base-uncased/vocab.txt\n",
-      "04/29/2020 00:57:33 - INFO - BERTQG.modeling -   loading archive file BERTQG/models/bert-base-uncased\n",
-      "04/29/2020 00:57:33 - INFO - BERTQG.modeling -   Model config {\n",
+      "04/29/2020 01:19:27 - INFO - BERTQG.tokenization -   loading vocabulary file BERTQG/models/bert-base-uncased/vocab.txt\n",
+      "04/29/2020 01:19:27 - INFO - BERTQG.modeling -   loading archive file BERTQG/models/bert-base-uncased\n",
+      "04/29/2020 01:19:27 - INFO - BERTQG.modeling -   Model config {\n",
       "  \"attention_probs_dropout_prob\": 0.1,\n",
       "  \"hidden_act\": \"gelu\",\n",
       "  \"hidden_dropout_prob\": 0.1,\n",
@@ -165,9 +151,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "04/29/2020 00:57:35 - INFO - BERTQG.tokenization -   loading vocabulary file BERTQG/models/bert-base-uncased/vocab.txt\n",
-      "04/29/2020 00:57:35 - INFO - BERTQG.modeling -   loading archive file BERTQG/models/bert-base-uncased\n",
-      "04/29/2020 00:57:35 - INFO - BERTQG.modeling -   Model config {\n",
+      "04/29/2020 01:19:29 - INFO - BERTQG.tokenization -   loading vocabulary file BERTQG/models/bert-base-uncased/vocab.txt\n",
+      "04/29/2020 01:19:29 - INFO - BERTQG.modeling -   loading archive file BERTQG/models/bert-base-uncased\n",
+      "04/29/2020 01:19:29 - INFO - BERTQG.modeling -   Model config {\n",
       "  \"attention_probs_dropout_prob\": 0.1,\n",
       "  \"hidden_act\": \"gelu\",\n",
       "  \"hidden_dropout_prob\": 0.1,\n",
@@ -200,42 +186,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-28T14:10:38.047781Z",
-     "start_time": "2020-04-28T14:10:38.040936Z"
-    }
-   },
-   "outputs": [],
    "source": [
-    "import json\n",
-    "with open('/workspace/ml-workspace/emnlp_qg/datasets/squad_train_evenly_distributed.json', 'r') as f:\n",
-    "    squad = json.load(f)"
+    "# Testing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# context = squad['data'][0]['paragraphs'][0]['context']\n",
-    "# ans = squad['data'][0]['paragraphs'][0]['qas'][0]['answers'][0]['text']\n",
-    "# ans_start = squad['data'][0]['paragraphs'][0]['qas'][0]['answers'][0]['answer_start']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 88,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-28T15:13:19.847214Z",
@@ -253,75 +212,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-28T15:14:51.167492Z",
-     "start_time": "2020-04-28T15:14:50.525903Z"
-    }
-   },
+   "execution_count": 89,
+   "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['when']\n",
-      "['UQA']\n",
-      "\n",
-      "\n",
-      "['when', 'did']\n",
-      "['UQA', 'LM']\n",
-      "\n",
-      "\n",
-      "['when', 'did', 'the']\n",
-      "['UQA', 'LM', 'LM']\n",
-      "\n",
-      "\n",
-      "['when', 'did', 'the', 'original']\n",
-      "['UQA', 'LM', 'LM', 'LM']\n",
-      "\n",
-      "\n",
-      "['when', 'did', 'the', 'original', 'theatre']\n",
-      "['UQA', 'LM', 'LM', 'LM', 'UQA']\n",
-      "\n",
-      "\n",
-      "['when', 'did', 'the', 'original', 'theatre', 'royal']\n",
-      "['UQA', 'LM', 'LM', 'LM', 'UQA', 'UQA']\n",
-      "\n",
-      "\n",
-      "['when', 'did', 'the', 'original', 'theatre', 'royal', 'open']\n",
-      "['UQA', 'LM', 'LM', 'LM', 'UQA', 'UQA', 'LM']\n",
-      "\n",
-      "\n",
-      "['when', 'did', 'the', 'original', 'theatre', 'royal', 'open', 'on']\n",
-      "['UQA', 'LM', 'LM', 'LM', 'UQA', 'UQA', 'LM', 'UQA']\n",
-      "\n",
-      "\n",
-      "['when', 'did', 'the', 'original', 'theatre', 'royal', 'open', 'on', '21']\n",
-      "['UQA', 'LM', 'LM', 'LM', 'UQA', 'UQA', 'LM', 'UQA', 'LM']\n",
-      "\n",
-      "\n",
-      "['when', 'did', 'the', 'original', 'theatre', 'royal', 'open', 'on', '21', 'january']\n",
-      "['UQA', 'LM', 'LM', 'LM', 'UQA', 'UQA', 'LM', 'UQA', 'LM', 'LM']\n",
-      "\n",
-      "\n",
-      "['when', 'did', 'the', 'original', 'theatre', 'royal', 'open', 'on', '21', 'january', '?']\n",
-      "['UQA', 'LM', 'LM', 'LM', 'UQA', 'UQA', 'LM', 'UQA', 'LM', 'LM', 'UQA']\n",
-      "\n",
-      "\n",
-      "['when', 'did', 'the', 'original', 'theatre', 'royal', 'open', 'on', '21', 'january', '?', '[SEP]']\n",
-      "['UQA', 'LM', 'LM', 'LM', 'UQA', 'UQA', 'LM', 'UQA', 'LM', 'LM', 'UQA', 'UQA']\n",
-      "\n",
-      "\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
-       "'when did the original theatre royal open on 21 january ?'"
+       "'when was the first theatre royal in newcastle and where was the original theatre royal in newcastle ?'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,153 +229,6 @@
    "source": [
     "QG.generate_question(context, ans, ans_start)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Testing"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Vocabulary"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-18T05:33:44.379956Z",
-     "start_time": "2020-04-18T05:33:42.298477Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import urllib.request\n",
-    "import numpy as np\n",
-    "word_url = \"http://svnweb.freebsd.org/csrg/share/dict/words?view=co&content-type=text/plain\"\n",
-    "response = urllib.request.urlopen(word_url)\n",
-    "long_txt = response.read().decode()\n",
-    "VOCAB_IDX2_STR = np.array(long_txt.splitlines()).reshape(-1,1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-18T05:33:44.384517Z",
-     "start_time": "2020-04-18T05:33:44.381340Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(25487, 1)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "VOCAB_IDX2_STR.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-18T05:39:34.541969Z",
-     "start_time": "2020-04-18T05:39:34.535600Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "import torch.nn as nn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-18T05:39:35.041424Z",
-     "start_time": "2020-04-18T05:39:35.036434Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "softmax = nn.Softmax(dim=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-18T05:40:46.146027Z",
-     "start_time": "2020-04-18T05:40:46.140537Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "qi_probs = softmax(torch.empty(VOCAB_IDX2_STR.shape[0]).normal_(mean=4,std=0.5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-18T05:40:46.497031Z",
-     "start_time": "2020-04-18T05:40:46.455058Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "qi = torch.argmax(qi_probs, dim=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-18T05:41:13.161422Z",
-     "start_time": "2020-04-18T05:41:13.151075Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Valparaiso'"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "VOCAB_IDX2_STR[qi].item()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
